examples/mixmnist/examples/mixmnist/steps/arabia/#test_results_result.txt
% Problog Inference Result：
anomaly_detection([img_9, img_1],[img_1, img_5],1) = 1.0000
anomaly_detection([img_5, img_1],[img_5, img_1],1) = 0.0000
anomaly_detection([img_9, img_5],[img_5, img_9],1) = 1.0000% Problog Inference Result：
anomaly_detection([img_9, img_1],[img_1, img_5],1) = 0.0000
anomaly_detection([img_5, img_1],[img_5, img_1],1) = 1.0000
anomaly_detection([img_9, img_5],[img_5, img_9],1) = 0.0000% Problog Inference Result：
anomaly_detection([img_9, img_1],[img_1, img_5],1) = 1.0000
anomaly_detection([img_5, img_1],[img_5, img_1],1) = 0.0000
anomaly_detection([img_9, img_5],[img_5, img_9],1) = 0.0000% Problog Inference Result：
anomaly_detection([img_9, img_1],[img_1, img_5],1) = 1.0000
anomaly_detection([img_5, img_1],[img_5, img_1],1) = 0.0000
anomaly_detection([img_9, img_5],[img_5, img_9],1) = 0.0000% Problog Inference Result：
anomaly_detection([img_9, img_1],[img_1, img_5],1) = 1.0000
anomaly_detection([img_5, img_1],[img_5, img_1],1) = 0.0000
anomaly_detection([img_9, img_5],[img_5, img_9],1) = 0.0000Error evaluating Problog model:
    toks = self.label_tokens(string, root_tokens)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/parser.py", line 1206, in label_tokens
    raise ParseError(string, "Ambiguous token role", t.location)
problog.parser.ParseError: Ambiguous token role at 14:1.Error evaluating Problog model:
    toks = self.label_tokens(string, root_tokens)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/parser.py", line 1206, in label_tokens
    raise ParseError(string, "Ambiguous token role", t.location)
problog.parser.ParseError: Ambiguous token role at 14:1.Error evaluating Problog model:
    toks = self.label_tokens(string, root_tokens)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/parser.py", line 1206, in label_tokens
    raise ParseError(string, "Ambiguous token role", t.location)
problog.parser.ParseError: Ambiguous token role at 14:1.% Problog Inference Result：
anomaly_detection([img_9, img_1],[img_1, img_5],1) = 1.0000
anomaly_detection([img_5, img_1],[img_5, img_1],1) = 0.0000
anomaly_detection([img_9, img_5],[img_5, img_9],1) = 0.0000% Problog Inference Result：
anomaly_detection([img_9, img_1],[img_1, img_5],1) = 1.0000
anomaly_detection([img_5, img_1],[img_5, img_1],1) = 0.0000
anomaly_detection([img_9, img_5],[img_5, img_9],1) = 0.0000% Problog Inference Result：
anomaly_detection([img_9, img_1],[img_1, img_5],1) = 1.0000
anomaly_detection([img_5, img_1],[img_5, img_1],1) = 0.0000
anomaly_detection([img_9, img_5],[img_5, img_9],1) = 0.0000% Problog Inference Result：
anomaly_detection([img_9, img_1],[img_1, img_5],1) = 1.0000
anomaly_detection([img_5, img_1],[img_5, img_1],1) = 0.0000
anomaly_detection([img_9, img_5],[img_5, img_9],1) = 0.0000% Problog Inference Result：
anomaly_detection([img_9, img_1],[img_1, img_5],1) = 1.0000
anomaly_detection([img_5, img_1],[img_5, img_1],1) = 0.0000
anomaly_detection([img_9, img_5],[img_5, img_9],1) = 0.0000% Problog Inference Result：
anomaly_detection([img_9, img_1],[img_1, img_5],1) = 1.0000
anomaly_detection([img_5, img_1],[img_5, img_1],1) = 0.0000
anomaly_detection([img_9, img_5],[img_5, img_9],1) = 0.0000